--- a/client/src/App.css
+++ b/client/src/App.css
@@ -588,4 +588,38 @@ video {
   overflow-x: hidden;
 }
  
+.app_container{
+  display: flex;
+  width: 100vw;
 
+}
+.container{  
+  width: 90%;
+  margin:0 auto;
+ 
+ }
+
+.main_container{
+  width:77vw;
+ 
+ 
+  /* height: 100%; */
+  transition: .3 all ease-in-out;
+ position: fixed;
+  right: 0;
+ 
+  
+ 
+ 
+}
+.expand{
+  /* flex-shrink: 1; */
+  width: 100vw;
+  left: 0;
+}
+.main{
+  position: fixed;
+  top: 60px;
+  right: 0;
+  width:77vw;
+}
