--- a/client/src/components/SideBar.css
+++ b/client/src/components/SideBar.css
@@ -1,45 +1,55 @@
 .sideBar{
+   
+    background-color: #F9FBFC;
+    height: 100dvh;
     position: fixed;
     top: 0;
-    left: 0;
     bottom: 0;
-    background-color: #F9FBFC;
-    width: 300px;
+    left: 0;
+ 
+    width: 23%;
     color: black;
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.5);
-    transition: .3s all ease-in-out;
+    transition:  0.3s left ease-in-out;
+    z-index: 100;
      
 }
 .hidden{
-    left: -300px;
+ left: -30%;
 }
 
-.sideBar .bar_icon{
-display: flex;
-justify-content: flex-end; padding:.5rem 1rem 0 0;
-}
+ 
 .links_sidebar {
     width: 100%;
-    height: 60%;
+    height: 90%;
     display: flex;
-  font-size: 20px;
+    font-size: 20px;
     align-items: center;
     text-align: left;
     justify-content: center;
+   
+    text-decoration: none;
+  
+}
+.links_sidebar>div{
+    
+    width: 100%;
   
 }
 .links_sidebar  p{
     cursor: pointer;
     border-radius: 5px;
-    padding: 1rem .5rem;
+    padding: 1rem 2rem;
 }
-.links_sidebar  p:hover {
+.link:hover {
     background-color: rgba(138, 138, 138, .27);
-    
-
 }
-.active{
-    font-weight: 600;
-    background-color: rgba(138, 138, 138, .27);
+.links_sidebar .active{
+  background-color: rgba(138, 138, 138, .27);
 }
  
+.link {
+    text-decoration: none; /* Remove underline */
+    color: inherit; /* Inherit text color */
+    width: 100%;
+  }
