--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,12 +1,11 @@
-.header{
+.app_container .main_container .header{
 color: white;
  padding-left: 2rem;
 background-color: #111827;
-width: 100%;
- position: fixed;
- top: 0;
- right: 0;
- width: 77%;
+width:100%;
+ 
+ 
+ 
 height: 60px;
 display: flex ;
  
@@ -16,7 +15,8 @@ z-index: 1000;
 transition:  0.3s all ease-in-out;
 }
 .active_header {
-    width: 100%;
+    width: 100vw !important;
+
 }
 
 .header_container{
@@ -24,9 +24,9 @@ transition:  0.3s all ease-in-out;
     padding-inline: 5px;
  
     display: flex ;
-justify-content: space-between;
+    justify-content: space-between;
  
-align-items: center !important;
+    align-items: center !important;
 }
 .header .bar_icon{
 cursor: pointer;
@@ -42,8 +42,7 @@ align-self: center;
     display: flex;
     gap: 1rem;
      
-    align-items: center;
-    /* justify-content: flex-start; */
+    align-items: center; 
     cursor: pointer;
      
  
