--- a/client/src/components/SideBar.css
+++ b/client/src/components/SideBar.css
@@ -2,20 +2,22 @@
    
     background-color: #F9FBFC;
     height: 100dvh;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
- 
-    width: 23%;
+    position: -webkit-sticky;
+    position: sticky;
+  /* height: 100vh;  */
+    width: 23vw;
     color: black;
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.5);
     transition:  0.3s left ease-in-out;
     z-index: 100;
-     
+     flex-grow: 1;
 }
 .hidden{
- left: -30%;
+width: 0 !important;
+position: relative;
+left: -100%;
+/* flex-shrink: 0; */
+
 }
 
  
