--- a/client/src/screens/assure/effectuerRecours/Effectuer.css
+++ b/client/src/screens/assure/effectuerRecours/Effectuer.css
@@ -1,4 +1,132 @@
 .effectuer{
-    background-color: red;
+ 
+    width: 100%;
+    height: auto;
+    padding:2rem 0 ;
+   
+}
+.main_holder{
+width: 94%;
+margin: 0 auto;
+padding: 50px 70px;
+background-color: white;
+box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.steps_holder{
+    display: flex; align-items: center;
+    gap: 1rem;
+    /* background-color: red; */
     width: 100%;
 }
+.main_holder h3{
+    font-size: 30px;
+    margin-bottom: 2rem;
+}
+.main_holder h5{
+    font-weight: 400;
+    font-size: 18px;
+}
+.step{
+    /* background-color: red; */
+    display: flex ;
+    align-items: center;
+justify-content: center;
+    width: 25%;
+    position: relative;
+    overflow-x: visible;
+}
+
+.avertissment_step{
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+}
+
+.number_holder{
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background-color: #8E8E8E;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 500;
+}
+.active{
+    background-color: #3F51B5;
+    
+}
+.active p{
+    font-weight: 500;
+}
+.avertissment_step p{
+    font-size: 18px;
+}
+.line{
+    width: 80% !important;
+    height: 2px;
+    position: absolute;
+    right: -44%;
+    top: 27%;
+    background-color: #8E8E8E;
+}
+.effectuer_body{
+    margin-top: 1rem;
+}
+ 
+.effectuer_body h3{
+font-weight: 400;
+}
+.avertissement_body .avertissement_conditions{
+    width: 100%;
+    text-align: justify;
+    background-color:#F9FBFC ;
+    padding: 10px 20px;
+    border: 1px solid rgba(0,0,0,0.4);
+    font-size: 14pxd;
+}
+.confirmation{
+    display: flex;
+    
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+    padding: 1rem 0;
+    font-size: 14px;
+}
+
+ /* btns  */
+ .btn_holder {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    justify-content: flex-end;   
+ }
+ .btn_holder >button{
+    font-size: 14px;
+    font-weight: 500; padding: .4rem 1.6rem;
+    border-radius: 5%;
+    cursor: pointer;
+    
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition: all .2 ease-in-out;
+ }
+ .btn_holder .suivant{
+    background-color: #3F51B5;
+    color: white;
+ }
+ .btn_holder .suivant:hover{
+    background-color: #3e55d6;
+ }
+ .btn_holder .retour{
+    background-color: #ffffff;
+    color: black;
+ }
+ .btn_holder .retour:hover{
+    background-color: #f3f3f3fc;
+ }
