--- a/client/src/helpers/protected.css
+++ b/client/src/helpers/protected.css
@@ -1,31 +1,30 @@
 .app_container{
     display: flex;
     width: 100%;
-    justify-self: flex-end;
-    position: fixed;
+    /* justify-self: flex-end; */
+    /* position: fixed; */
     
 }
 
 
 .app_container .maine_container{
-      overflow-y: auto;
+    /* overflow-y: auto; */
     width: 77vw;;
-    display: flex;
+  overflow-x: hidden;
     height: 100vh;
-    flex-direction: column;
+     background-color:#F9FBFC;
+     transition:  0.3s all ease-in-out;
+     position: fixed;
+     right: 0;
   
   }
   .expand{
     width: 100vw !important;
  
-    /* left: 0; */
+    
   }
   .main{
-   
+    position: relative;
     top: 60px;
-    /* right: 0; */
-    
     width:100%;
-   
-   
-  }
+   }
