--- a/client/src/screens/assure/effectuerRecours/Effectuer.css
+++ b/client/src/screens/assure/effectuerRecours/Effectuer.css
@@ -56,16 +56,6 @@ justify-content: center;
     color: white;
     font-weight: 500;
 }
-.active{
-    background-color: #3F51B5;
-    
-}
-.active p{
-    font-weight: 500;
-}
-.avertissment_step p{
-    font-size: 18px;
-}
 .line{
     width: 80% !important;
     height: 2px;
@@ -73,6 +63,17 @@ justify-content: center;
     right: -44%;
     top: 27%;
     background-color: #8E8E8E;
+}
+.active{
+    background-color: #3F51B5;  
+}
+
+
+.active p{
+    font-weight: 500;
+}
+.avertissment_step p{
+    font-size: 18px;
 }
 .effectuer_body{
     margin-top: 1rem;
@@ -89,6 +90,25 @@ font-weight: 400;
     border: 1px solid rgba(0,0,0,0.4);
     font-size: 14pxd;
 }
+.avertissement_conditions h4{
+   font-size: 22px;
+padding-block: .5rem;
+}
+.avertissement_conditions .point_aver{
+   /* text-align:justify; */
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   gap: 2rem;
+   margin-bottom: 1rem;
+}
+.avertissement_conditions .point_aver div{
+   /* border: 1px solid black; */
+   /* background-color: red; */
+ /* padding: 1rem; */
+   /* border-radius: 50%; */
+}
+
 .confirmation{
     display: flex;
     
@@ -130,3 +150,216 @@ font-weight: 400;
  .btn_holder .retour:hover{
     background-color: #f3f3f3fc;
  }
+
+ /* maintenant choix commission page  */
+ .input_holder{
+    width: 100%;
+    padding: 1.6rem 1rem;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    gap: .7rem;
+    font-weight: 400;
+    /* border: 1px solid rgba(0,0,0,0.4); */
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-bottom: 1rem;
+    cursor: pointer;
+ }
+
+ .selected_input{
+    background-color: rgba(47,137,252,.08);
+    color: #3e55d6;
+    font-weight: 500;
+     border: 2px solid #3F51B5;
+ }
+
+ /* verification  */
+ .national_verification{
+    width: 100%;
+    border-top: 1px solid gray;
+    padding: 1rem 0;
+
+ }
+ .national_verification .national_verification_choices{
+    width: 100%;
+    padding: 1rem .5rem;
+        border: 1px solid rgba(0,0,0,0.4);
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        border-radius: 5px;
+        -moz-appearance: none; /* Pour Firefox */
+        -webkit-appearance: none; 
+        outline: none;
+        cursor: pointer;
+        
+ }
+ 
+
+  .national_verification .national_verification_choices::-ms-expand {
+    display: none;  
+  }
+ 
+/* maintenant les verification 
+ */
+ /* montant  */
+ .montant{
+    width: 100%;
+    margin: 1rem 0;
+ 
+ }
+ .montant >input {
+    width:100%;
+    padding: 1rem .5rem;
+    border: 1px solid rgba(0,0,0,0.4);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 5px;  outline: none;
+ }
+
+ /* si decision */
+ .Decision{
+    width: 100%;
+    margin: 1rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+ }
+ .Decision >input{
+    width:48%;
+    padding: 1rem .5rem;
+    border: 1px solid rgba(0,0,0,0.4);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 5px;  outline: none;
+ }
+ /* delais 
+  */
+  .Delais{
+    width: 100%;
+    margin: 1rem 0;
+  }
+  .Delais >input{
+    width:50%;
+    padding: 1rem .5rem;
+    border: 1px solid rgba(0,0,0,0.4);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 5px;
+      outline: none;
+      cursor: pointer;
+ }
+
+ .error_message{
+    color: red;
+    margin-top: -.5rem;
+    font-size: 14px;
+ }
+
+/* choix objet  */
+.filters{
+   width: 100%;
+   margin-bottom: 2rem;
+border-bottom: 1px solid rgb(225, 225, 225);
+padding-bottom: 1rem;
+}
+.filters .filters_objet{
+   width: 100%;
+   padding: .7rem .5rem ;
+   border: 1px solid black;
+   outline: none;
+   border-radius: 2px;
+}
+
+
+
+
+ /* joindre documment page  */
+ .joindre_document_body{
+    width: 100%;
+ }
+ .document_holder{
+    width: 100%;
+    margin: 1rem 0;
+ }
+ .document_holder h4{
+    font-size: 24px;
+    font-weight: 300;
+ }
+ .document_holder .remarque{
+    padding: 1rem .5rem;
+    background-color: rgba(215,215,215,.25);
+    border-radius: 5px;
+    margin: .5rem 0;
+ }
+ .document_holder input{
+    width: 100%;
+ }
+
+
+ /* tring  */
+ 
+  .file-input-label {
+    display: block;
+    padding: 10px;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .file-input {
+    display: none; /* Cacher l'input natif */
+  }
+  
+  .file-preview {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+  }
+  
+  /* message succes  */
+  .message{
+   /* background-color: red; */
+   width: 35%;
+   position: fixed;
+   text-align: center;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%,-50%);
+   background-color:white ;
+   border-radius: 5px;
+background-color: white;
+   z-index: 2000;
+   padding: 2rem 0;
+  }  
+  .message>*{
+   text-decoration: none;
+   color: black;
+  }
+  .message i{
+   color: #7DCE13;
+   font-size: 44px;
+   margin-bottom: 1rem;
+  }
+  .message h4{
+   font-size: 22px;
+   margin-bottom: 1rem;
+  }
+.message .lien_tablau{
+   background-color: #124076;
+   padding: .3rem 1.5rem ;
+   border: none;
+   color: white;
+   border-radius: 5px;
+}
+
+
+  .overlay{
+   background-color: rgba(0, 0, 0, 0.271);
+   z-index: 1200 !important;
+   position: fixed;
+   top: 0;
+   left: 0 !important;
+   bottom: 0;
+   right: 0;
+   width: 100vw;
+   height: 100%;
+  }
