--- a/client/src/screens/assure/home/Home.css
+++ b/client/src/screens/assure/home/Home.css
@@ -67,8 +67,13 @@
 	align-items: center;
 	grid-gap: 24px;
 	box-shadow: 1px 1px 15px rgba(0,0,0,0.17)  ;
+	cursor: pointer;
 	
 }
+.box-info li:hover{
+	transform: scale(0.97);
+	transition: .3s;
+  }
 .box-info li i {
 	width: 80px;
 	height: 80px;
@@ -166,6 +171,10 @@
 	.box-info li {
 		width: 280px;
 	}
+}
+
+.main.false .box-info li {
+	width: 280px;
 }
 
 
