--- a/client/src/screens/assure/effectuerRecours/Effectuer.css
+++ b/client/src/screens/assure/effectuerRecours/Effectuer.css
@@ -666,7 +666,9 @@ background-color: white;
    padding: .3rem 1.5rem ;
    border: none;
    color: white;
-   border-radius: 5px;
+   border-radius: 5px
+   ;
+   margin-inline:.5rem;
 }
 
 
@@ -681,3 +683,41 @@ background-color: white;
    width: 100vw;
    height: 100%;
   }
+
+  /* some animation  */
+  .fade{
+   animation: fadeInTranslateAnimation .3s ease-in forwards;
+   opacity: 0;
+   transform: translateY(-20px); /* Initial position */
+ }
+ 
+ @keyframes fadeInTranslateAnimation {
+   from {
+     opacity: 0;
+     transform: translateY(-20px); /* Initial position */
+   }
+   to {
+     opacity: 1;
+     transform: translateY(0); /* Final position */
+   }
+ }
+  
+ /* now the sections animation 
+  */
+  .fadeTranslate{
+
+ animation: fadeInTranslateAnimation .2s ease-in forwards;
+   opacity: 0;
+   transform: translateX(-200px); /* Initial position */
+ }
+ 
+ @keyframes fadeInTranslateAnimation {
+   from {
+     opacity: 0;
+     transform: translateX(-200px); /* Initial position */
+   }
+   to {
+     opacity: 1;
+     transform: translateX(0); /* Final position */
+   }
+ }
