--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1282,4 +1282,22 @@ background-color: white;
   height: 100%;
  }
  
- 
+.spinner_container{
+  width: 100%;height: 100%;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1300 !important;
+} 
+.overlay_spinner{
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 1200 !important;
+  position: fixed;
+  top: 0;
+  left: 0 !important;
+  bottom: 0;
+  right: 0;
+  width: 100vw;
+  height: 100%;
+ }
