--- a/client/src/components/SideBar.css
+++ b/client/src/components/SideBar.css
@@ -10,8 +10,8 @@
     overflow: visible;
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.5) !important;
     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
-    transition:  0.3s left ease-in-out;
-    /* z-index: 1; */
+    transition:  0.3s all ease-in-out;
+    z-index: 1 !important;
      flex: 1;
      
 }
@@ -67,4 +67,35 @@ left: -32vw !important;
     text-decoration: none; /* Remove underline */
     color: inherit; /* Inherit text color */
     width: 100%;
+  }
+
+
+  @media screen and (max-width: 650px) {
+  
+    .sideBar{
+    border-radius: 15px 15px 0 0;
+      height: auto;
+       
+    bottom: 0;
+
+      z-index: 200;
+      
+      left: 0 !important;
+      width: 100dvw;
+      
+     padding: .5rem 0;
+       
+       
+  }
+  .hidden{ 
+  bottom: -100% !important;
+  left: 0 !important;
+  }
+
+  .links_sidebar  p{
+    cursor: pointer;
+    border-radius: 5px;
+    padding: .4rem 2rem;
+}
+  
   }
