--- a/client/src/helpers/protected.css
+++ b/client/src/helpers/protected.css
@@ -31,3 +31,20 @@
     width:100%;
     padding: 20px 20px;
    }
+
+   
+  @media screen and (max-width: 650px) {
+
+    .app_container .maine_container{
+      /* overflow-y: auto; */
+      width:100vw;
+ 
+    
+    }
+    .main{
+   
+      padding: 20px 10px;
+     }
+   
+   
+  }
