--- a/client/src/components/oflline/Header.css
+++ b/client/src/components/oflline/Header.css
@@ -30,7 +30,7 @@
       align-items: center !important;
   }
   .headerOffline .bar_icon{
-    /* display: none; */
+    display: none;
   cursor: pointer;
   font-size: 24px;
   }
