--- a/client/src/screens/assure/Compte/Compte.css
+++ b/client/src/screens/assure/Compte/Compte.css
@@ -60,6 +60,9 @@
   color: white ;
   border-radius: 5px;
 }
+.showMotpass{
+  margin-bottom: 30px;
+}
 .lastone{
   display: flex;
   justify-content: flex-end;
