--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -5,7 +5,7 @@
   /* width:100%; */
   position: fixed;
   right: 0;
-  left: 23vw; 
+  left: 300px; 
   height: 60px;
   display: flex ;
   
@@ -15,7 +15,8 @@
   transition:  0.3s left ease-in-out;
 }
 .active_header {
-   left: 0 !important;
+   /* left: 0 !important; */
+   left: 80px !important;
 
 }
 
