--- a/client/src/components/SideBar.css
+++ b/client/src/components/SideBar.css
@@ -5,7 +5,7 @@
  
     position: fixed;
     left: 0;
-    width: 23vw;
+    width: 300px;
     color: black;
     overflow: visible;
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.5) !important;
@@ -16,22 +16,36 @@
      
 }
 .hidden{ 
-left: -32vw !important;
-
+/* left: -32vw !important; */
+width: 80px;
 }
 /* logo  */
 .logo{
   text-transform: capitalize;
-  font-size: 34px;
+  font-size: 30px;
   width: 100%;
   height: 60px;
   display: flex;
   align-items: center;
-  justify-content: center;
-
+  justify-content: left;
+  padding: 2rem 1rem;
+  white-space: nowrap;
 }
-.logo span{
-  color: #3F51B5;
+.logo .bleu{
+  color: #1631c9;
+}
+
+.logo-cercle{
+  padding: 2px 8px 2px 8px;
+  border: 1px solid #111827;
+  border-radius: 50%;
+  font-size: 27px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  background-color: #111827;
+  color: #fff !important;
 }
  
 .links_sidebar {
@@ -54,10 +68,10 @@ left: -32vw !important;
 .links_sidebar  p{
     cursor: pointer;
     border-radius: 5px;
-    padding: 1rem 2rem;
+    padding: 1rem 1.5rem;
 }
-.link:hover {
-    background-color: rgba(138, 138, 138, .27);
+.link p:hover {
+    background-color: rgba(138, 138, 138, .27) !important;
 }
 .links_sidebar .active{
   background-color: rgba(138, 138, 138, .27);
@@ -69,13 +83,38 @@ left: -32vw !important;
     width: 100%;
   }
 
+  .text-hidden {
+    display: none;
+  }
+
+  .link p span{
+    white-space: nowrap;
+  }
+
+
+  /* css des icons */
+  .link p{
+    /* width: 100% !important; */
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  }
+  .link p i {
+    font-size: 25px;
+    margin-right: 25px;
+  }
+  .link p .bi.bi-person-gear{
+    font-size: 30px;
+  }
+
+
 
   @media screen and (max-width: 650px) {
   
     .sideBar{
     border-radius: 15px 15px 0 0;
       height: auto;
-       
+
     bottom: 0;
 
       z-index: 200;
@@ -85,17 +124,19 @@ left: -32vw !important;
       
      padding: .5rem 0;
        
-       
-  }
-  .hidden{ 
-  bottom: -100% !important;
-  left: 0 !important;
+    }
+    .hidden{ 
+    bottom: -100% !important;
+    left: 0 !important;
+    }
+
+    .links_sidebar  p{
+      cursor: pointer;
+      border-radius: 5px;
+      padding: .4rem 2rem;
+    }
+
   }
 
-  .links_sidebar  p{
-    cursor: pointer;
-    border-radius: 5px;
-    padding: .4rem 2rem;
-}
-  
-  }
+
+ 
